src/objects/CventEvents__TaskConfiguration__c.object
<CustomObject>
    <description>Stores the configuration for the automatic task creation.</description>
    <fields>
        <fullName>CventEvents__ActivityDateRule__c</fullName>
        <description>Indicates the logic of population the Task Activity Date field.</description>
        <inlineHelpText>Indicates the logic of population the Task Activity Date field.</inlineHelpText>
        <label>Activity Date Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
                <value>
                    <fullName>A certain number of days after the object is created</fullName>
                </value>
                <value>
                    <fullName>Cvent activity timestamp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__AssignmentRule__c</fullName>
        <description>Indicates the assignment rule for the Task owner.</description>
        <inlineHelpText>Indicates the assignment rule for the Task owner.</inlineHelpText>
        <label>Assignment Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to Lead/Contact&apos;s owner</fullName>
                </value>
                <value>
                    <fullName>Assign to specific User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__Description__c</fullName>
        <description>Stores the description of the Task Configuration.</description>
        <inlineHelpText>Stores the description of the Task Configuration.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Task Configuration is active.</description>
        <inlineHelpText>Indicates whether the Task Configuration is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsExistingRecordScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Task will be created in case of a single SF prospect has been matched with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Task will be created in case of existing SF Contact/Lead has been matched with the Cvent Contact.</inlineHelpText>
        <label>Single Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsMultipleExistingRecordsScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Task will be created in case of multiple SF prospects has been matched with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Task will be created in case of multiple SF prospects has been matched with Cvent contact.</inlineHelpText>
        <label>Multiple Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsNewRecordScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Task will be created in case of new SF prospect has been created and associated with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Task will be created in case of new SF Contact/Lead has been created and associated with the Cvent Contact.</inlineHelpText>
        <label>No Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__NumberOfDays__c</fullName>
        <description>Stores the number of days between the Task creation and Task Activity Date.</description>
        <inlineHelpText>Stores the number of days between the Task creation and Task Activity Date.</inlineHelpText>
        <label>Number Of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__Object__c</fullName>
        <description>Name of the Salesforce object which triggers automatic task creation. Can be either Attendee__c or AttendeeActivity__c.</description>
        <inlineHelpText>Name of the Salesforce object which triggers automatic task creation. Can be either Attendee__c or AttendeeActivity__c.</inlineHelpText>
        <label>Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RelationRule__c</fullName>
        <description>Indicates the relation rule for the Task.</description>
        <inlineHelpText>Indicates the assignment rule for the Task.</inlineHelpText>
        <label>Related To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Campaign most recently linked to event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__TaskActivityDate__c</fullName>
        <description>Activity Date of the Task.</description>
        <inlineHelpText>Activity Date of the Task.</inlineHelpText>
        <label>Task Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__TaskDescription__c</fullName>
        <description>Description of the Task.</description>
        <inlineHelpText>Description of the Task.</inlineHelpText>
        <label>Task Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__TaskOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Task in case of &apos;Assign to specific User&apos; rule.</description>
        <inlineHelpText>Owner of the Task in case of &apos;Assign to specific User&apos; rule.</inlineHelpText>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__TaskPriority__c</fullName>
        <description>Priority of the Task.</description>
        <inlineHelpText>Priority of the Task.</inlineHelpText>
        <label>Task Priority</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__TaskStatus__c</fullName>
        <description>Status of the Task.</description>
        <inlineHelpText>Status of the Task.</inlineHelpText>
        <label>Task Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__TaskSubject__c</fullName>
        <description>Subject of the Task.</description>
        <inlineHelpText>Subject of the Task.</inlineHelpText>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Title__c</fullName>
        <description>Stores the title of the Task Configuration.</description>
        <inlineHelpText>Stores the title of the Task Configuration.</inlineHelpText>
        <label>Title</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Task Configuration</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__TaskSubject__c</columns>
        <columns>CventEvents__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Task Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>